update readme & license
